feat: Implementar sistema completo de alertas y recordatorios de reservas
- Agregar entidad AlertaReserva con tipos y estados de alerta
- Implementar controlador REST para gestión de alertas
- Crear servicio y casos de uso para alertas automáticas
- Agregar repositorio y persistencia de alertas
- Crear migración de base de datos para tabla alertas_reservas
- Implementar plantillas de email para diferentes tipos de alertas
- Agregar scheduler para procesamiento automático de alertas
- Integrar notificaciones por email y websocket